src/main.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
/* font-family: 'Rubik', sans-serif */

:root {
  /* Primary */
  --pri: hsl(238, 40%, 52%);
  --loud: hsl(358, 79%, 66%);
  --pri-light: hsl(239, 57%, 85%);
  --loud-light: hsl(357, 100%, 86%);

  /* Neutral */
  --pri-dark: hsl(212, 24%, 26%);
  --pri-greyed: hsl(211, 10%, 45%);
  --less-light: hsl(223, 19%, 88%);
  --light: hsl(223, 19%, 93%);
  --lighter: hsl(228, 33%, 97%);
  --white: hsl(0, 0%, 100%);

  font-size: 16px;
}

* {
  font-family: 'Rubik', sans-serif;
}

body {
  min-width: 375px;
  background-color: var(--light);
  margin: 0;
}

